# spad

./: .gitignore  .prospector.yml  .travis.yml  README.rst  pyproject.toml  tox.ini
.hypothesis/examples/0964ada1a5f4d164/: 27b25e75e5b8b403  407d5550b4140ee1  6459ab1b0c35d5df  97f305af287a80ab  ee8e5fb71a784fe0  facc74e9e2160f7b
.hypothesis/examples/4df5a5572abd19fd/: 0d987bff2c539ca2  820f581c4fe98b08  a0876363e5093f83  acd72f779531166d  d71686325874e809
.hypothesis/examples/68b8e495332a4939/: 1f1a8a5d7e5e1dcb  26f9999e27041b0e  456c3e9e511deebb  63ef28ce2a37348b  d97a80d0b6f4f623  f8b44e623d0bd824
.hypothesis/examples/9ca997bf4360564f/: 7f39212dd29e9133  b67c855a88d4b833  bbd09669baddc89f  becd36796042095d
.hypothesis/examples/f197e65a5a30f2dd/: 368f7d598a7e8471  9530dec075cf6919  cfc1b8a8336122f5
docs/: document.sh
docs/source/: conf.py  index.rst  modules.rst  spad.bounding_box.rst  spad.etl.rst  spad.map_matching.rst  spad.rst  spad.sparse_utils.rst  spad.ueae.rst
examples/: analyze_gps_tags.py  analyze_gps_tags2.py  day_hour_pings.parquet  explore.ipynb  generate_stop_sequences.py  get_gps_tags.py  inverse-ue.ipynb  map-matching.ipynb  pings-by-tract-sample.csv  stop-inference.ipynb  stop-sequence.parquet
examples/data/: ACSST5Y2020.S1701_data_with_overlays_2022-06-10T113703.csv
sql/: create-osm-entity-tags.sql  create-osmnx_default_maxspeed.sql  get_daily_gps_counts.py  osm-columns.csv  osm-features.sql
src/spad/: __init__.py  bounding_box.py  cache.py  cli.py  common.py  data.py  db.py  etl.py  map_matching.py  osm.py  sparse_utils.py  stop_inference.py  ueae.py
tests/: conftest.py  test_bounding_box.py  test_cache.py  test_etl.py  test_map_matching.py  test_spad.py  test_ueae.py
tests/fixtures/: mock_gps.csv
