[tool.poetry]
name = "spad"
version = "0.1.0"
description = ""
authors = ["Matt Battifarano <matthew.battifarano@gmail.com>"]

[tool.poetry.scripts]
spad = 'spad.cli:spad'

[tool.black]
line-length = 79

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pandas = "^1.3.5"
geopandas = "^0.10.2"
osmnx = "^1.0.1"
networkx = "^2.5"
pyproj = "^3.0.0"
toolz = "^0.11.1"
tensorflow = "^2.7.0"
tensorflow-probability = "^0.15.0"
SQLAlchemy = "^1.4.31"
psycopg2 = "^2.9.3"
GeoAlchemy2 = "^0.10.2"
click = "^8.0.3"
tqdm = "^4.62.3"
Pint = "^0.18"
pygeos = "0.10.2"
plyvel = "^1.4.0"
Pint-Pandas = "^0.2"
pyarrow = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
matplotlib = "^3.3.3"
contextily = "^1.0.1"
seaborn = "^0.11.1"
pylint = "^2.6.0"
Sphinx = "^3.4.3"
pytest-cov = "^2.11.1"
sphinx-rtd-theme = "^0.5.1"
pydot = "^1.4.2"
hypothesis = "^6.30.1"
prospector = {extras = ["with_mypy", "with_bandit"], version = "^1.5.3"}
mapclassify = "^2.4.3"
folium = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
